--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body class="background-dark-1 noto-sans">
+  <body class="background-dark-1 noto-sans position-absolute start-0 bottom-0 top-0 end-0">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app" class=""></div>
+    <div id="app" class="h-100"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
